fix(.gitignore): exclude cert_gen.sh from version control

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ docs/
 postman/
 src/main/resources/creds.env
 src/main/resources/application-prod.yaml
+!scripts/cert_gen.sh
 
 ### STS ###
 .apt_generated
