--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -88,6 +88,16 @@ proxy:
   target-port: 5433          # PostgreSQL target port
   block-by-default: true
 
+  # SSL for proxy connections
+  ssl:
+    enabled: true
+    key-store: ${KEY_STORE}
+    key-store-password: ${KEY_STORE_PASSWORD}
+    trust-store: ${TRUST_STORE}
+    trust-store-password: ${TRUST_STORE_PASSWORD}
+    # Require client certificates for database connections
+    client-auth: false
+
   # Critical SQL keywords that require approval
   critical-keywords:
     - DROP
@@ -109,6 +119,13 @@ proxy:
 jwt:
   secret:  ${JWT_KEY}
   expiration: 86400000  # 24 hours in milliseconds
+
+# oauth2 configuration
+oauth2:
+  enabled: true
+  providers:
+    - github
+    - google
 
 # Peer approval configuration
 approval:
