fix(.gitignore): remove specific path for creds.env to simplify ignore rules feat(API_GUIDE): add comprehensive documentation for the Interceptor Backend API

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ target/
 docs/
 .postman/
 postman/
-src/main/resources/creds.env
+creds.env
 src/main/resources/application-prod.yaml
 certs/
 src/main/resources/ssl/
