feat(application-dev.yaml): add debug logging for Spring HTTP and Netty

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -35,6 +35,8 @@ logging:
   level:
     org.springframework.security: debug
     org.springframework.web: debug
+    org.springframework.http: debug
+    io.netty: debug
 
 # Proxy configuration
 proxy:
