feat(application-dev.yaml): update logging configuration to focus on com.proxy

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -33,10 +33,7 @@ spring:
 
 logging:
   level:
-    org.springframework.security: debug
-    org.springframework.web: debug
-    org.springframework.http: debug
-    io.netty: debug
+    com.proxy: debug
 
 # Proxy configuration
 proxy:
